test-framework/sudo-compliance-tests/src/sudo/flag_list/short_format/snapshots/empty_runas.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/short_format/mod.rs
expression: stdout
---
User root may run the following commands on container:
    (root) ALL
