test-framework/sudo-compliance-tests/src/sudo/flag_list/short_format/snapshots/negated_command_alias.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/short_format/mod.rs
expression: stdout
---
User ferruccio may run the following commands on container:
    (root) NOPASSWD: /tmp
    (root) <BIN_LS>, !/usr/bin/true, /usr/bin/false
